# mlops

./: .gitignore  Dockerfile  MLOps_Cluester.ipynb  MLOps_Propensao_inadimplencia.ipynb  app.py  classification.py  clusterization.py  docker-compose.yml  log.py  model_loader.py  prediction_returns.py  propensao_inadimplencia_classification.joblib  propensao_inadimplencia_clusterization.joblib  pyproject.toml  readme.md  regression.py  variable.joblib
.devcontainer/: devcontainer.json  docker-compose.yml
