[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
requests = "^2.31.0"
flask-cors = "^4.0.0"
imblearn = "^0.0"
pandas = "^2.2.0"
seaborn = "^0.13.2"
numpy = "^1.26.3"
scikit-learn = "^1.4.0"
plotly = "^5.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"